@@ -4,65 +4,36 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
 public class UserPrincipal implements UserDetails {
 
     private Long id;
     private String username;
+    private String password;
     private String role;
 
-    // ---------- setters ----------
-    public void setId(Long id) {
+    public UserPrincipal(Long id, String username, String password, String role) {
         this.id = id;
-    }
-
-    public void setUsername(String username) {
         this.username = username;
-    }
-
-    public void setRole(String role) {
+        this.password = password;
         this.role = role;
     }
 
-    // ---------- getters ----------
     public Long getId() {
         return id;
     }
 
     @Override
-    public String getUsername() {
-        return username;
-    }
-
-    // ---------- UserDetails ----------
-    @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(() -> role);
+        return Collections.emptyList();
     }
 
-    @Override
-    public String getPassword() {
-        return "N/A";
-    }
+    @Override public String getPassword() { return password; }
+    @Override public String getUsername() { return username; }
 
-    @Override
-    public boolean isAccountNonExpired() {
-        return true;
-    }
-
-    @Override
-    public boolean isAccountNonLocked() {
-        return true;
-    }
-
-    @Override
-    public boolean isCredentialsNonExpired() {
-        return true;
-    }
-
-    @Override
-    public boolean isEnabled() {
-        return true;
-    }
+    @Override public boolean isAccountNonExpired() { return true; }
+    @Override public boolean isAccountNonLocked() { return true; }
+    @Override public boolean isCredentialsNonExpired() { return true; }
+    @Override public boolean isEnabled() { return true; }
 }
